--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-eslint": "7.0.0",
     "babel-jest": "16.0.0",
     "babel-loader": "6.2.5",
-    "babel-preset-react-app": "^1.0.0",
+    "babel-preset-react-app": "1.0.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
@@ -16,9 +16,8 @@
     "css-loader": "0.25.0",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
-    "enzyme": "^2.9.1",
     "eslint": "3.8.1",
-    "eslint-config-react-app": "^0.3.0",
+    "eslint-config-react-app": "0.3.0",
     "eslint-loader": "1.6.0",
     "eslint-plugin-flowtype": "2.21.0",
     "eslint-plugin-import": "2.0.1",
@@ -37,12 +36,9 @@
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
-    "react-addons-test-utils": "^15.6.0",
-    "react-dev-utils": "^0.3.0",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1",
+    "react-dev-utils": "0.3.0",
     "recursive-readdir": "2.1.0",
-    "redux-logger": "^2.7.0",
+    "redux-logger": "2.7.0",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
@@ -52,17 +48,18 @@
     "webpack-manifest-plugin": "1.1.0"
   },
   "dependencies": {
-    "lodash": "^4.17.2",
+    "lodash": "4.17.2",
     "moment": "2.17.1",
-    "react": "^15.4.1",
-    "react-highlight": "^0.10.0",
-    "react-js-pagination": "^2.1.0",
-    "react-redux": "^4.4.6",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "semantic-ui-react": "^0.62.1"
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
+    "react-highlight": "0.10.0",
+    "react-js-pagination": "2.1.0",
+    "react-redux": "4.4.6",
+    "react-router": "3.0.0",
+    "react-router-redux": "4.0.7",
+    "redux": "3.6.0",
+    "redux-thunk": "2.1.0",
+    "semantic-ui-react": "0.62.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -96,3 +93,4 @@
     "extends": "react-app"
   }
 }
+
